# my_blog

./: backend_docs.md  command.txt  corrected_command.txt  docker-compose.yml  frontend_docs.md  render.yaml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  blog.db
backend/src/: database.rs  handlers.rs  main.rs  models.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: content.css  global.css
frontend/src/router/: index.ts
frontend/src/views/: CreatePostView.vue  EditPostView.vue  HomeView.vue  PostView.vue
