[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
